[gd_scene load_steps=7 format=3 uid="uid://bfqsu0ef0tbwr"]

[ext_resource type="Script" path="res://scenes/writing/thought_path_writing.gd" id="1_bepvy"]
[ext_resource type="PackedScene" uid="uid://bev4y77i8yuv4" path="res://scenes/common/overworld_chunk.tscn" id="1_v0cbj"]
[ext_resource type="PackedScene" uid="uid://2gbmvh2mnekm" path="res://scenes/writing/typing_interface.tscn" id="2_1fks0"]
[ext_resource type="PackedScene" uid="uid://dfwo0v0x630d7" path="res://entities/player/player.tscn" id="3_mw1q6"]
[ext_resource type="PackedScene" uid="uid://cky2j5ujb433" path="res://globals/typing_camera.tscn" id="5_b6pbx"]
[ext_resource type="PackedScene" uid="uid://c1mfi2u8badvo" path="res://ui/HUD.tscn" id="7_lq5hx"]

[node name="ThoughtPathWriting" type="Node"]
script = ExtResource("1_bepvy")

[node name="OverworldChunk" parent="." instance=ExtResource("1_v0cbj")]

[node name="Player" parent="." instance=ExtResource("3_mw1q6")]
position = Vector2(33, 156)

[node name="TypingCamera" parent="." node_paths=PackedStringArray("playerA") instance=ExtResource("5_b6pbx")]
position_smoothing_enabled = true
playerA = NodePath("../Player")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="TypingInterface" parent="CanvasLayer" node_paths=PackedStringArray("player") instance=ExtResource("2_1fks0")]
player = NodePath("../../Player")

[node name="InfoText" parent="CanvasLayer/TypingInterface" index="1"]
offset_left = 113.0
offset_right = 885.0

[node name="HUD" parent="CanvasLayer" instance=ExtResource("7_lq5hx")]

[node name="GeneralProgressBar" parent="CanvasLayer/HUD" index="4"]
offset_left = 80.0
offset_top = 528.0
offset_right = 5288.0
offset_bottom = -148.0

[editable path="OverworldChunk"]
[editable path="CanvasLayer/TypingInterface"]
[editable path="CanvasLayer/HUD"]
